# SimpleNotebookLM

./: .env.example  .gitignore  JOURNAL.md  QUICKSTART.md  README.md  env  pyproject.toml  requirements-eval.txt  requirements.txt  test_gemini.py
.ai-log/: session.jsonl
.claude/: settings.json
.codex/: hooks.json
.devcontainer/: devcontainer.json
.github/hooks/: hooks.json
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 0001_initial_users_and_logs.py  0002_add_documents_ingestion_citations.py  0003_backfill_documents_from_qdrant.py
scripts/: setup_hooks.sh
src/: config.py  documents_service.py  export.py  filters.py  indexing.py  learning.py  llm.py  rag.py  schemas.py  store.py
src/auth/: __init__.py  db.py  deps.py  models.py  router.py  security.py  service.py
src/db/: __init__.py  base.py  engine.py  migrate.py  models_citations.py  models_documents.py  models_ingestion.py  repositories.py
src/docs/: db_migration.md  user_guide.md
src/evaluation/: chunking_strategies.py  ragas_evaluator.py  run_chunking.py  run_reranking.py
src/interfaces/: api.py  cli.py  session.py  ui.py
src/prompts/: answer.j2  flashcards.j2  quiz.j2  summary_map.j2  summary_reduce.j2  summary_single.j2
