[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "rag-learning-system"
version = "0.1.0"
description = "NotebookLM-style RAG system for Vietnamese documents — Q&A, summarization, quiz, and flashcards"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    # LangChain stack
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-huggingface>=0.1",
    "langchain-qdrant>=0.2",
    "langchain-google-genai>=2.0",
    "langchain-openai>=0.2",
    "langchain-text-splitters>=0.3",
    "langchain-experimental>=0.3",
    # Vector store
    "qdrant-client>=1.11",
    # Embeddings & LLM backends
    "sentence-transformers>=3.0",
    "transformers>=4.45",
    "torch>=2.0",
    # Template rendering
    "jinja2>=3.1",
    # API server
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    # CLI
    "typer>=0.13",
    # UI
    "streamlit>=1.40",
    "httpx>=0.27",
    # Settings & validation
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # PDF loading
    "pypdf>=5.0",
]

[project.optional-dependencies]
eval = [
    "ragas>=0.2",
    "datasets>=3.0",
    "pandas>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",   # for FastAPI TestClient
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
rag-cli = "src.interfaces.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
